--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "debug-strategy": "tsx src/scripts/debug-strategy.ts",
     "debug-transition": "tsx src/scripts/debug-transition.ts",
     "calculate-hash": "tsx src/scripts/calculate-hash.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/watabe-futa/electric-chair-game/issues"
   },
-  "homepage": "https://github.com/watabe-futa/electric-chair-game#readme",
+  "homepage": "https://watabe-futa.github.io/electric-chair-game",
   "dependencies": {
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@types/node": "^24.1.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "gh-pages": "^6.3.0",
     "tsx": "^4.20.3",
     "vite": "^7.0.6"
   }
