--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "calculate-hash": "tsx src/scripts/calculate-hash.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "node scripts/deploy.js"
   },
   "repository": {
     "type": "git",
